app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blogapp
spec:
  selector:
    app: blogapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
