app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blogapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: blogapp-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blogapp
                port:
                  number: 80
